--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "node": "^18.13.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0",
+    "morgan": "^1.10.0",
+    "node": "^18.13.0",
+    "path": "^0.12.7"
   }
 }
