--- a/tsf/package.json
+++ b/tsf/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.6",
     "core-js": "^3.8.3",
     "node": "^18.13.0",
     "vue": "^3.2.13",
