--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "request": "^2.88.2",
+    "socket.io": "^4.5.4"
   }
 }
