--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "node": "^18.13.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   }
 }
