--- a/tsf/package.json
+++ b/tsf/package.json
@@ -13,6 +13,8 @@
     "node": "^18.13.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
