--- a/tsf/package.json
+++ b/tsf/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.2.6",
     "core-js": "^3.8.3",
+    "mongoose": "^6.9.0",
+    "morgan": "^1.10.0",
     "node": "^18.13.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
